--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Imkerverein Leondinger Bienen {% if page.title %}| {{ page.title }}{% endif %}</title>
@@ -10,5 +10,7 @@
 </head>
 <body>
     {{ content }}
+
+    <script src="/scripts/vendor.js"></script>
 </body>
 </html>
