--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -4,4 +4,10 @@ layout: default
 
 {% include menu.html %}
 
-{{ content }}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            {{ content }}
+        </div>
+    </div>
+</div>
