--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     <meta name="description" content="{% if page.excerpt %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
     <link rel="stylesheet" href="/styles/vendor.css" />
 </head>
-<body>
-    {{ content }}
+<body>{{ content }}
 
     <script src="/scripts/vendor.js"></script>
 </body>
