--- a/sass/default.scss
+++ b/sass/default.scss
@@ -1,1 +1,11 @@
-﻿
+﻿.banner-image {
+	margin: -19px 0 20px 0;
+	padding: 0;
+
+	width: 100%;
+    height: calc(50vh - 51px);
+    background-image: url("../../images/../../images/banner-image.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
