--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Info <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Info<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/info/imkern-in-leonding.html">Imkern in Leonding</a></li>
                         <li><a href="#">Another action</a></li>
@@ -25,6 +25,7 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="#">One more separated link</a></li>
                     </ul>
+                    <a href="/kontakt.html">Kontakt</a>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
