--- a/sass/default.scss
+++ b/sass/default.scss
@@ -4,7 +4,7 @@
 
 	width: 100%;
     height: calc(50vh - 51px);
-    background-image: url("../../images/../../images/banner-image.jpg");
+    background-image: url("../../images/../../images/banner-image-1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
