--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -4,7 +4,7 @@
 	border-radius: 0;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
     color: #fff;
 }
 
@@ -14,4 +14,10 @@
 
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
 	color: #fff;
+}
+
+@media (max-width: 767px) {
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a, .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+		color: #fff;
+	}
 }
